# life-rehearsal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  serve_model.py  test_scene.html
.streamlit/: config.toml
config/: llm.yaml  scenarios.yaml  settings.py
config/prompts/: analyzer.py  simulator.py
docs/: brand-guidelines.md
src/api/: dependencies.py  main.py  middleware.py
src/api/routes/: analyze.py
src/core/analyzer/: bias_detector.py  deconstructor.py  questioner.py  style_classifier.py
src/core/report/: builder.py  narrator.py  visualizer.py
src/core/simulator/: curve_builder.py  engine.py  personality_quiz.py
src/db/: database.py  history_store.py  models.py
src/db/repositories/: decision_repo.py  user_repo.py
src/llm/: cache.py  client.py  token_counter.py
src/models/: decision.py  report.py  simulation.py  user.py
src/services/: auth_service.py  credit_service.py  decision_service.py  email_service.py  simulation_service.py
src/utils/: logger.py  text.py
tests/: conftest.py
tests/unit/: test_curve_builder.py  test_history_store.py  test_models.py  test_personality_quiz.py  test_utils.py
ui/: app.py
ui/assets/: style.css
ui/components/: bias_radar.py  decision_form.py  emotional_chart.py  icons.py  scene.html  style.py
ui/pages/: _00_login.py  _01_decision_input.py  _02_analysis_report.py  _03_history.py  _04_simulation.py
ui/static/: model.glb  model_clean.glb  model_fixed.glb  scene.html
